--- a/index.html
+++ b/index.html
@@ -3,31 +3,55 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>LC知识记录</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <!-- 主题 -->
+  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/pure.css">
 </head>
 
 <body>
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '',
-      repo: '',
+      name: '知识记录',
+      repo: 'https://github.com/github-lichao',
       // 开启侧边栏定制,加载_sidebar.md
       loadSidebar: true,
-      // 开启目录,最大层级为2
-      subMaxLevel: 2,
-      // 开启导航栏,加载_navbar.md
-      loadNavbar: true,
+      // 开启目录,最大层级为8
+      subMaxLevel: 8,
       // 开启封面,加载_coverpage.md
       coverpage: true,
+      // onlyCover: true,
+      notFoundPage: '/_404.md',
+      search: {
+        paths: 'auto',
+        placeholder: '搜索',
+        noData: '找不到结果',
+        depth: 8,
+      },
+      copyCode: {
+        buttonText: "复制代码",
+        errorText: "复制失败",
+        successText: "复制成功",
+      },
     }
   </script>
-  <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+  <!--Java代码高亮-->
+  <script src="//unpkg.com/prismjs/components/prism-java.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-python.js"></script>
+  <!--全文搜索,直接用官方提供的无法生效-->
+  <script src="https://cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
+  <!-- 复制到剪贴板 -->
+  <script src="//unpkg.com/docsify-copy-code"></script>
+  <!-- emoji -->
+  <script src="//unpkg.com/docsify/lib/plugins/emoji.js"></script>
+  <!-- 图片缩放 -->
+  <script src="//unpkg.com/docsify/lib/plugins/zoom-image.js"></script>
+  <!-- 字数统计 -->
+  <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
 </body>
 
 </html>
