--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     window.$docsify = {
       name: '知识记录',
       repo: 'https://github.com/github-lichao',
+      // 开启封面,加载_coverpage.md
+      coverpage: true,
+      onlyCover: true,
       // 开启侧边栏定制,加载_sidebar.md
       loadSidebar: true,
       // 开启目录,最大层级为8
       subMaxLevel: 8,
-      // 开启封面,加载_coverpage.md
-      coverpage: true,
-      // onlyCover: true,
       notFoundPage: '/_404.md',
       search: {
         paths: 'auto',
