--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <!-- 主题 -->
-  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/pure.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/docsify/4.12.2/themes/dark.min.css" />
 </head>
 
 <body>
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '知识记录',
+      name: 'LC知识记录',
       repo: 'https://github.com/github-lichao',
       // 开启封面,加载_coverpage.md
       coverpage: true,
-      onlyCover: true,
+      // onlyCover: true,
       // 开启侧边栏定制,加载_sidebar.md
       loadSidebar: true,
       // 开启目录,最大层级为8
-      subMaxLevel: 8,
+      subMaxLevel: 3,
       notFoundPage: '/_404.md',
       search: {
         paths: 'auto',
@@ -38,7 +38,7 @@
       },
     }
   </script>
-  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script> -->
   <!--Java代码高亮-->
   <script src="//unpkg.com/prismjs/components/prism-java.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-python.js"></script>
