--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       repo: 'https://github.com/github-lichao',
       // 开启封面,加载_coverpage.md
       coverpage: true,
-      // onlyCover: true,
+      onlyCover: true,
       // 开启侧边栏定制,加载_sidebar.md
       loadSidebar: true,
       // 开启目录,最大层级为8
