feat: 首页样式修改

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <!-- 主题 -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/docsify/4.12.2/themes/dark.min.css" />
+  <link rel="stylesheet" href="/index.css" />
 </head>
 
 <body>
@@ -19,7 +20,7 @@
       repo: 'https://github.com/github-lichao',
       // 开启封面,加载_coverpage.md
       coverpage: true,
-      onlyCover: true,
+      // onlyCover: true,
       // 开启侧边栏定制,加载_sidebar.md
       loadSidebar: true,
       // 开启目录,最大层级为8
